--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Citizens Bank - Mortgage Loan Officer Careers With Citizens</title>
+	<title>Citizens Bank - Careers for Mortgage Loan Officers</title>
 
 	<!-- Stylesheet -->
 	<link rel="stylesheet" href="css/style.css">
@@ -28,7 +28,7 @@
 	<!-- Hero Section -->
 	<section class="hero" aria-label="Hero Banner">
 		<div class="hero-image"></div>
-		<div class="hero-overlay">
+		<div class="hero-layer">
 			<!-- <h1>Heading 1</h1> -->
 		</div>
 	</section>
@@ -75,7 +75,7 @@
 			</section>
 
 			<!-- Bank Info Section -->
-			<section class="bank-info" id="locations">
+			<section class="bank-locations" id="locations">
 				<h3>Citizens Bank and Citizens One Home Loans</h3>
 				<p class="para">The Home Lending Solutions division operates under the Citizens Bank brand within our banking footprint: Massachusetts, Rhode Island, Connecticut, New Hampshire, Vermont, New York, New Jersey, Pennsylvania, Delaware, Ohio and Michigan. Outside of this footprint, we market our home lending products under the Citizens One Home Loans brand and actively recruit loan officers in the following states: Illinois, Indiana, Kentucky, Maryland, Virginia, North Carolina and South Carolina, as well as in Washington, D.C.</p>
 			</section>
